tweak the ramadda-links li to fix the spacing problem on safari

--- a/src/org/ramadda/repository/htdocs/style.css
+++ b/src/org/ramadda/repository/htdocs/style.css
@@ -546,7 +546,7 @@ i.fa, i.fas,i.fab {
 }
 
 .ramadda-links-inner ul {
-    padding-left:15px;
+    padding-left:20px;
     margin-bottom:0px;
 }
 
